--- a/index.html
+++ b/index.html
@@ -5,8 +5,261 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body
+    style="
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+    "
+  >
+    <!-- paymet email template mailgun -->
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        height: 100%;
+        background-color: #feefce;
+        padding: 30px;
+        align-items: center;
+        justify-content: center;
+        font-family: Nunito Sans, sans-serif;
+      "
+    >
+      <div
+        style="
+          width: 40%;
+          padding: 25px;
+          height: 100%;
+          border-radius: 4px;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          background-color: white;
+        "
+      >
+        <div
+          style="
+            display: flex;
+            flex-direction: column;
+            background-color: #fff7f2;
+            gap: 10px;
+            padding: 20px;
+            align-items: center;
+          "
+        >
+          <h1
+            style="
+              font-weight: 700;
+              font-size: 30px;
+              text-align: center;
+              line-height: 1.3em;
+              margin: 0;
+            "
+          >
+            Hooray! Your order has been confirmed.
+          </h1>
+          <p
+            style="
+              margin: 0;
+              text-align: center;
+              color: #77736c;
+              font-weight: 500;
+              font-size: 15px;
+            "
+          >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ex
+            aliquid quis.
+          </p>
+          <button
+            style="
+              background-color: #fe584c;
+              padding: 12px 20px;
+              outline: none;
+              border: 0px;
+              border-radius: 50px;
+              color: white;
+              cursor: pointer;
+            "
+          >
+            View Order Details
+          </button>
+          <p
+            style="
+              margin: 0;
+              text-align: center;
+              color: #77736c;
+              font-weight: 500;
+              font-size: 15px;
+            "
+          >
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Cupiditate, odio ut. Ea qui officiis labore eligendi numquam.
+            Cupiditate, quas perferendis.
+          </p>
+        </div>
+        <div
+          style="
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+          "
+        >
+          <h2
+            style="
+              text-align: center;
+              font-size: 22px;
+              font-weight: 700;
+              margin: 0;
+            "
+          >
+            Order Details
+          </h2>
+          <p
+            style="
+              font-weight: 500;
+              text-align: center;
+              margin: 0;
+              font-size: 15px;
+            "
+          >
+            Confirmation Number: <span style="color: red">#6054184</span>
+          </p>
+          <div
+            style="
+              width: 100%;
+              display: flex;
+              flex-direction: column;
+              border: 1px solid #aaa;
+              font-size: 12px;
+              border-radius: 4px;
+            "
+          >
+            <div
+              style="
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                gap: 7px;
+                color: #585858;
+                padding: 15px;
+              "
+            >
+              <p style="margin: 0">Transaction Id : 1804815648</p>
+              <p style="margin: 0">Quantity : 1</p>
+              <div
+                style="
+                  width: 100%;
+                  display: flex;
+                  gap: 82%;
+                  align-items: center;
+                  margin: 0;
+                "
+              >
+                <p style="margin: 0">Total:</p>
+                <span style="font-weight: 700">$16.85</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- status change template for mailgun -->
+    <div
+      style="
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #f8f9fd;
+        padding: 20px;
+        font-family: Nunito Sans, sans-serif;
+      "
+    >
+      <div
+        style="
+          width: 40%;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          background-color: white;
+          align-items: center;
+          padding: 20px;
+          border-radius: 4px;
+          font-size: 12px;
+        "
+      >
+        <img style="width: 140px" src="./1.avif" alt="img" />
+        <h3
+          style="
+            margin: 0;
+            font-weight: 700;
+            text-align: center;
+            font-size: 16px;
+          "
+        >
+          You've Successfully Changed the status of your order!
+        </h3>
+        <div
+          style="
+            width: 100%;
+            padding: 30px 0px;
+            border-top: 1px solid #e9e6e6;
+            border-bottom: 1px solid #e9e6e6;
+          "
+        >
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              gap: 4px;
+              border: 1px solid #e9e6e6;
+              padding: 12px;
+            "
+          >
+            <div
+              style="
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-size: 12px;
+              "
+            >
+              <h3 style="margin: 0; font-weight: 500">Pay when you want !</h3>
+              <button
+                style="
+                  padding: 7px 15px;
+                  background-color: #dcfeee;
+                  color: #6fd3ab;
+                  border-radius: 50px;
+                  border: 0px;
+                  font-size: 12px;
+                "
+              >
+                Earned
+              </button>
+            </div>
+            <p style="color: #77736c; margin: 0">
+              You can use Pay now and Pay later functionality and pay as you
+              want...
+            </p>
+          </div>
+        </div>
+        <h3 style="margin: 0px; font-weight: 600; text-align: center">
+          Keep it up, share in one click and unlock all the features.
+        </h3>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
